--- a/Forms/LessonFormDesign.ui
+++ b/Forms/LessonFormDesign.ui
@@ -14,32 +14,6 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QPushButton" name="prevTaskButton">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>370</y>
-      <width>181</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Предыдущее задание</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="nextTaskButton">
-    <property name="geometry">
-     <rect>
-      <x>570</x>
-      <y>370</y>
-      <width>181</width>
-      <height>28</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Следующее задание</string>
-    </property>
-   </widget>
    <widget class="QWidget" name="taskWidget" native="true">
     <property name="geometry">
      <rect>
@@ -125,11 +99,57 @@
        <x>40</x>
        <y>40</y>
        <width>631</width>
-       <height>281</height>
+       <height>241</height>
       </rect>
      </property>
      <layout class="QVBoxLayout" name="allWordsVerticalLayout"/>
     </widget>
+    <widget class="QPushButton" name="getResButton">
+     <property name="geometry">
+      <rect>
+       <x>250</x>
+       <y>290</y>
+       <width>211</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Проверить</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QWidget" name="">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>370</y>
+      <width>721</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <item>
+      <widget class="QPushButton" name="prevTaskButton">
+       <property name="text">
+        <string>Предыдущее задание</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="stopLessonButton">
+       <property name="text">
+        <string>Завершить занятие</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="nextTaskButton">
+       <property name="text">
+        <string>Следующее задание</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
