--- a/Forms/MainWindow.ui
+++ b/Forms/MainWindow.ui
@@ -93,7 +93,7 @@
       <item>
        <layout class="QVBoxLayout" name="verticalLayout_3">
         <item>
-         <widget class="QComboBox" name="comboBox"/>
+         <widget class="QComboBox" name="lessonsComboBox"/>
         </item>
         <item>
          <widget class="QPushButton" name="selectLessonButton">
@@ -237,6 +237,19 @@
       </item>
      </layout>
     </widget>
+   </widget>
+   <widget class="QPushButton" name="exportWords">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>221</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Экспортировать словарь в csv</string>
+    </property>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
